test: Makefile target to run against local Prometheus
Adds several Makefile targets, but mainly:

- `make test-daemon`
- `make clean-pod`

Which can be used by developers to build&run host-metering locally
within couple seconds againts a Prometheus server that is spawned in
a podman container/pod.

The run can be cleaned-up via.

```
make clean
make clean-pod
```

`README.md` is updated to reflect this + several basic stuff that were
missing.

Signed-off-by: Petr Vobornik <pvoborni@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,14 @@ contrib/rpm/host-metering.spec
 contrib/selinux/tmp/
 contrib/selinux/host-metering.pp
 
+# testing
+hack/test-cert.crt
+hack/test-cert.key
+hack/cpumetrics/
+
 # Coverage
 coverage.*
 
 # Binary
 host-metering
+dist/host-metering
