fix: prevent overlapping remote writes
By adding configuration validatation to prevent possibility of
overlapping end and start of two separate write attempts.

Also does additional basic validations:

- ensures that WriteRetryMinInt < WriteRetryMaxInt
- ensures that MetricsWALPath is defined
- ensures that WriteUrl is defined

Signed-off-by: Petr Vobornik <pvoborni@redhat.com>

--- a/hack/host-metering.conf
+++ b/hack/host-metering.conf
@@ -11,7 +11,8 @@ host_cert_path=./hack/test-cert.crt
 host_cert_key_path=./hack/test-cert.key
 collect_interval_sec=0
 label_refresh_interval_sec=10
-write_retry_attempts=4
-write_retry_interval_sec=2
+write_timeout_sec=1
+write_retry_attempts=1
+write_retry_max_int_sec=2
 metrics_wal_path=./hack/cpumetrics
 log_level=DEBUG
