--- a/.devcontainer/host-metering.conf
+++ b/.devcontainer/host-metering.conf
@@ -2,18 +2,19 @@
 # and uses a test certificate and key.
 
 # E.g. could be used as:
-# ./host-metering -config hack/host-metering.conf daemon
+# ./host-metering -config .devcontainer/host-metering.conf daemon
+# If a podman-compose is not used, make sure to replace http://prometheus:9090 with localhost
 
 [host-metering]
-write_url=http://localhost:9090/api/v1/write
+write_url=http://prometheus:9090/api/v1/write
 write_interval_sec=5
-host_cert_path=./hack/test-cert.crt
-host_cert_key_path=./hack/test-cert.key
+host_cert_path=./mocks/consumer/cert.pem
+host_cert_key_path=./mocks/consumer/key.pem
 collect_interval_sec=0
 label_refresh_interval_sec=10
 write_timeout_sec=1
 write_retry_attempts=1
 write_retry_max_int_sec=2
-metrics_wal_path=./hack/cpumetrics
+metrics_wal_path=./mocks/cpumetrics
 metrics_max_age_sec=30
 log_level=DEBUG
