--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,11 +1,3 @@
-FROM registry.access.redhat.com/ubi7
+FROM registry.access.redhat.com/ubi7/go-toolset:1.19
 
-RUN yum install go-toolset-1.19 git make curl gzip tar --enablerepo=rhel-7-server-devtools-rpms -y
-
-COPY ./entrypoint.sh /usr/bin/
-RUN chmod +x /usr/bin/entrypoint.sh
-
-COPY ./enable_go_scl.sh /etc/profile.d/
-RUN chmod +x /etc/profile.d/enable_go_scl.sh
-
-ENTRYPOINT ["entrypoint.sh"]
+ENV IS_IN_CONTAINER=true
