--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ node_modules
 #dev
 mocks/subscription-manager-*
 mocks/consumer/
-.devcontainer/docker-compose.local.yml
 mocks/cpumetrics/
+.devcontainer/docker-compose.local.yml
+coverage.*
