fix: remove host-metering-selinux on uninstall of host-metering
So that the following works symetrically:

```
yum install host-metering # installs also host-metering-selinux
yum remote host-metering  # als remove it
```

Signed-off-by: Petr Vobornik <pvoborni@redhat.com>

--- a/contrib/rpm/host-metering.spec.in
+++ b/contrib/rpm/host-metering.spec.in
@@ -51,6 +51,7 @@ Host metering service
 Summary:       SELinux policy module for host-metering
 BuildArch:     noarch
 %{?selinux_requires}
+Requires:      %{name} = %{version}-%{release}
 
 %description selinux
 This package installs and sets up the SELinux policy security module for host-metering.
