docs: man pages (#20)
* docs: man page for host-metering binary

Adding man page for

```
man host-metering
```

Signed-off-by: Petr Vobornik <pvoborni@redhat.com>

* docs: man page for host-metering.conf(5)

Man page for config file:

```
man 5 host-metering.conf
```

Signed-off-by: Petr Vobornik <pvoborni@redhat.com>

---------

Signed-off-by: Petr Vobornik <pvoborni@redhat.com>

--- a/contrib/rpm/host-metering.spec.in
+++ b/contrib/rpm/host-metering.spec.in
@@ -74,6 +74,10 @@ install -m 0755 -vd                     %{buildroot}%{_bindir}
 install -m 0755 -vp $(pwd)/bin/*        %{buildroot}%{_bindir}/
 install -m 0755 -vd                     %{buildroot}%{_unitdir}
 install -m 644 contrib/systemd/host-metering.service %{buildroot}%{_unitdir}/%{name}.service
+install -m 0755 -vd                     %{buildroot}%{_mandir}/man1
+install -m 644 contrib/man/host-metering.1 %{buildroot}%{_mandir}/man1/host-metering.1
+install -m 0755 -vd                     %{buildroot}%{_mandir}/man5
+install -m 644 contrib/man/host-metering.conf.5 %{buildroot}%{_mandir}/man5/host-metering.conf.5
 
 install -D -m 0644 contrib/selinux/%{modulename}.pp %{buildroot}%{_datadir}/selinux/packages/%{selinuxtype}/%{modulename}.pp
 install -D -p -m 644 contrib/selinux/%{modulename}.if %{buildroot}%{_datadir}/selinux/devel/include/distributed/%{modulename}.if
@@ -101,6 +105,8 @@ fi
 %doc README.md
 %{_bindir}/*
 %attr(644,root,root) %{_unitdir}/%{name}.service
+%{_mandir}/man1/host-metering.1*
+%{_mandir}/man5/host-metering.conf.5*
 
 %files selinux
 %{_datadir}/selinux/packages/%{selinuxtype}/%{modulename}.pp
