build: set explicit URL in rpm spec
As %gourl macro does not work on RHEL 7.

Signed-off-by: Petr Vobornik <pvoborni@redhat.com>

--- a/contrib/rpm/host-metering.spec.in
+++ b/contrib/rpm/host-metering.spec.in
@@ -26,7 +26,7 @@ Summary:        None
 
 License:        Apache-2.0
 ExcludeArch:    %{ix86} s390 ppc ppc64
-URL:            %{gourl}
+URL:            https://github.com/RedHatInsights/host-metering/
 
 Source:         %{name}-%{version}.tar.gz
 
