build: adapt local test daemons for ubi 7/8/9 dev tests
Adjust Dockerfile and Makefile to allow for easier testing
of different ubi environments via optional make test-daemon
argument for specifying the desired ubi version.

https://issues.redhat.com/browse/CLOUDX-807

Signed-off-by: ccowman <ccowman@redhat.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,5 @@
-FROM registry.access.redhat.com/ubi7/go-toolset:1.19
+ARG UBI_VERSION
+
+FROM registry.access.redhat.com/ubi${UBI_VERSION}/go-toolset:1.19
 
 ENV IS_IN_CONTAINER=true
