--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: '1.19'
 
@@ -27,14 +27,14 @@ jobs:
       run: make test
 
     - name: Upload Go coverage results - HTML
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: go-coverage
+        name: go-coverage-html
         path: coverage.html
 
     - name: Upload Go coverage results - txt
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: go-coverage
+        name: go-coverage-txt
         path: coverage.txt
 
