--- a/.packit.yaml
+++ b/.packit.yaml
@@ -25,6 +25,7 @@ actions:
 
   post-upstream-clone:
     - "make rpm/spec"
+    - "cp contrib/rpm/epel-7-x86_64-custom.cfg /etc/mock/epel-7-x86_64.cfg"
 
 jobs:
 - job: copr_build
